--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -172,4 +172,6 @@
     <!-- FastCharge feature -->
     <string name="fast_charging_title">Fast charging</string>
     <string name="fast_charging_summary">Disable to reduce the heat produced by the device while charging or to extend the lifespan of the battery</string>
+    
+    <string name="yalp_version">Project-YALP-OS Version</string>
 </resources>
