Settings: Build YALPSTORE into Setttings Based on implementations by DU and OmniROM, so credits to mazda and maxwen for this.
spezi77:
-Added our new Pixel Dust icon for Ten. Credits to Roger Truttmann!
-Moved PDSettings into System Settings

NurKeinNeid:
-Change icon to Derp owl
-Move to top level settings

@idoybh edits: Changed to our icon, adapted to Android.bp, 12

Change-Id: If29de8999bd198afb8190363a42c96a5927879f9
Co-authored-by: Ido Ben-Hur <idoybh2@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: afterallafk <shivamatiet2001@gmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -174,4 +174,8 @@
     <string name="fast_charging_summary">Disable to reduce the heat produced by the device while charging or to extend the lifespan of the battery</string>
     
     <string name="yalp_version">Project-YALP-OS Version</string>
+
+    <!-- Top level YALP STORE --> 
+   <string name="yalp_settings_title">YALP STORE</string>
+   <string name="yalp_settings_summary">Yalp Hub</string>
 </resources>
