--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -40,6 +40,14 @@
         settings:highlightableMenuKey="@string/menu_key_connected_devices"
         settings:controller="com.android.settings.connecteddevice.TopLevelConnectedDevicesPreferenceController"/>
 
+    <Preference
+        android:key="top_level_yalp_settings"
+        android:title="@string/yalp_settings_title"
+        android:summary="@string/yalp_settings_summary"
+        android:icon="@drawable/ic_yalp_settings_icon"
+        android:order="-135"
+        android:fragment="com.yalp.settings.YalpSettings" />
+
     <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.applications.AppDashboardFragment"
         android:icon="@drawable/ic_apps"
