--- a/res/xml/shortcuts.xml
+++ b/res/xml/shortcuts.xml
@@ -36,4 +36,14 @@
         android:shortcutShortLabel="@string/power_usage_summary_title" >
         <intent android:action="android.intent.action.POWER_USAGE_SUMMARY" />
     </shortcut>
+
+    <shortcut
+        android:shortcutId="manifest-shortcut-a-yalp"
+        android:icon="@drawable/ic_yalp_settings_icon"
+        android:shortcutShortLabel="@string/yalp_settings_title" >
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.android.settings.Settings$YALPSettingsActivity" />
+    </shortcut>
 </shortcuts>
