Settings: Add Yalp Maintainer String Signed-off-by: afterallafk <shivamatiet2001@gmail.com> Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -178,4 +178,7 @@
     <!-- Top level YALP STORE --> 
    <string name="yalp_settings_title">YALP STORE</string>
    <string name="yalp_settings_summary">Yalp Hub</string>
+
+   <!-- Yalp Maintainer -->
+    <string name="yalp_maintainer">Device Maintainer</string>
 </resources>
