--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -38,6 +38,14 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
 
+    <!-- Yalp Maintainer  -->
+    <Preference
+        android:key="yalp_maintainer"
+        android:title="@string/yalp_maintainer"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.YalpMaintainerPreferenceController"/>
+
     <!-- Security patch -->
     <Preference
         android:key="security_key"
